# Tweakify

./: .gitignore  README.md  Tweakify.py  Tweakify.pyw  install_requirements.bat  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
app/: __init__.py  __main__.py  controller.py  copy.py
app/actions/: __init__.py  base.py  catalog.py  cleanup.py  graphics.py  input_ui.py  network.py  performance.py  restore.py  services.py  startup.py
app/domain/: __init__.py  compatibility.py  models.py  presets.py
app/platform/: __init__.py  adapters.py  diagnostics.py  elevation.py  processes.py
app/storage/: __init__.py  state.py
app/ui/: __init__.py  main_window.py  theme.py
tests/: conftest.py  test_app_domain.py  test_app_launcher.py  test_app_platform.py  test_app_startup.py  test_app_ui.py  test_build_portable.py  test_setup_installer.py
tools/: __init__.py  build_portable.py
